# memory.fm

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  directory_structure.txt  pyproject.toml  requirements.txt
data/raw/lastfmstats_original/: lastfmstats-lazulinoother_tail_Sep_09.json
docs/: usage.adoc
examples/: demo.py  filter.py  filter_2.md  from_lastfmstats.py  lastfmstats-demo.csv  lastfmstats-demo.json  sample.json  sample_0.json  sample_2.json  top_charts.py
src/memory_fm/: __init__.py  exceptions.py  export.py  filters.py  models.py
src/memory_fm/filter/: filter.py
src/memory_fm/ingest/: __init__.py  check_json_validity.py  parse_lastfmstats.py  parse_lastfmstats_json.py
src/memory_fm/io/: loaders.py
src/memory_fm/normalise/: normalise_lastfmstats.py
src/memory_fm/utils/: loaders.py
src/memoryfm/: __init__.py  _typing.py  errors.py
src/memoryfm/charts/: top_charts.py
src/memoryfm/core/: _meta.py  _validation.py  objects.py
src/memoryfm/export/: export.py
src/memoryfm/filter/: __init__.py  filters.py
src/memoryfm/io/: __init__.py  _loaders.py  _normalise.py  _writers.py  api.py  lastfmstats.py
src/memoryfm/util/: __init__.py  _file_handler.py  date_input_check.py
tests/: check_lastfmstats.py  sample.json  sample.py  sample_2.json  sample_2.py  sample_lastfmstats.py  sample_loaders.py  test_loaders.py  test_parse_lastfmstats_json.py
tests/core/: test_core_objects.py  test_meta.py  test_validation.py
tests/data/: test_to_json.json
tests/data/csv/: mismatch_delimiter.csv  no_username.csv  sample.csv  valid_data.csv  wrong_header.csv
tests/data/json/: invalid_json.json  lastfmstats-lazulinoother_tail.json  latest_scrobble.json  sample.json  unordered.json  wrong_scrobbles_column_values.json
tests/data/raw/: lastfmstats-lazulinoother_tail.json  lastfmstats-lazulinoother_test.json  wrong_column.json  wrong_column_2.json
tests/ingest/: output_test_parse_lastfmstats_json.txt  output_test_parse_lastfmstats_json_new.txt  test_parse_lastfmstats_json.py
tests/io/: test_io_lastfmstats.py
